# color-convert

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: color.rs  config.rs  error.rs  handles.rs  lib.rs  utils.rs
src/handles/: cmyk.rs  hex.rs  hsl.rs  hsv.rs  map.rs  mod.rs  rgb.rs
tests/: cmyk.rs  color.rs  common.rs  config.rs  handles.rs  hex.rs  hsl.rs  hsv.rs  lib.rs  rgb.rs  utils.rs
